完成交易区域和校区的数据
